--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,5 +2,5 @@ tasks:
   - command: "npm install"
 vscode:
   extensions:
-    - "dbaeumer.vscode-eslint"
-		- "firsttris.vscode-jest-runner"
+    - dbaeumer.vscode-eslint
+    - kavod-io.vscode-jest-test-adapter
