maint: switch install and test to prebuild step

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - command: "npm install && npm test"
+  - prebuild: "npm install && npm test"
 vscode:
   extensions:
     - dbaeumer.vscode-eslint
